CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(QComicBook)
SET(VERSION "0.4.2")
SET(PACKAGE qcomicbook) 
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_BINARY_DIR}/config.h)

SET(QT_MIN_VERSION "4.3.0")
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

#ADD_DEFINITIONS(-DDATADIR="${CMAKE_INSTALL_PREFIX}/share/qcomicbook")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(help)
