# Process this file with autoconf to produce a configure script.
AC_INIT(QComicBook, 0.4.0, pawel.stolowski@wp.pl)
AM_INIT_AUTOMAKE(qcomicbook, 0.4.0)
AC_CONFIG_HEADERS([src/config.h])
AC_PREFIX_DEFAULT([/usr/local])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
#AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
#AC_PROG_GCC_TRADITIONAL

if test "x$have_qt" = "xno"
then
	AC_MSG_ERROR("Qt library is required to compile QComicBook!", 1)
fi

#
# custom test for correct Qt version
AC_LANG(C++)

PKG_CHECK_MODULES(QtGui,QtGui QtCore,ac_qtgui=yes,ac_qtgui=no)
if test "x$ac_qtgui" = "xno"
then
	AC_MSG_ERROR("Qt4 GUI support missing!", 1)
fi

AC_SUBST(QtGui_CFLAGS)
AC_SUBST(QtGui_LIBS)

AC_CONFIG_FILES([Makefile src/Makefile icons/Makefile help/Makefile])
AC_OUTPUT()

