# Process this file with autoconf to produce a configure script.
AC_INIT(QComicBook, 0.4.1, stolowski@gmail.com)
AM_INIT_AUTOMAKE(qcomicbook, 0.4.1)
AC_CONFIG_HEADERS([src/config.h])
AC_PREFIX_DEFAULT([/usr/local])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
#AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
#AC_PROG_GCC_TRADITIONAL

#
# custom test for correct Qt version
AC_LANG(C++)

PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(QtCore,QtCore,ac_qt=yes,ac_qt=no)
PKG_CHECK_MODULES(QtGui,QtGui,ac_qt=$ac_qt,ac_qt=no)
if test "x$ac_qt" = "xno"
then
	AC_MSG_ERROR("Qt4 GUI support missing!", 1)
fi

AC_MSG_CHECKING(moc location)
MOC=`$PKG_CONFIG --variable moc_location QtCore`
if test -x $MOC
then
        AC_MSG_RESULT($MOC)
else
        AC_MSG_ERROR([moc not found!])
fi

AC_SUBST(MOC)
AC_SUBST(QtCore_CFLAGS)
AC_SUBST(QtCore_LIBS)
AC_SUBST(QtGui_CFLAGS)
AC_SUBST(QtGui_LIBS)

AC_CONFIG_FILES([Makefile src/Makefile icons/Makefile help/Makefile])
AC_OUTPUT()

