iconsdir = $(datadir)/qcomicbook
icons_DATA = bestfit.png \
	     bookmark.png \
	     fitheight.png \
	     fitwidth.png \
	     fforward.png \
	     fbackward.png \
	     info.png \
	     japanese.png \
	     nextpage.png \
	     openarch.png \
	     opendir.png \
	     orgsize.png \
	     pagebottom.png \
	     pagetop.png \
	     prevpage.png \
	     rright.png \
	     rleft.png \
	     qcomicbook.png \
	     settings.png \
	     thumbnails.png \
	     twopages.png \
	     wholepage.png \
	     qcomicbook-splash.png

appicondir = $(datadir)/pixmaps
appicon_DATA = qcomicbook.png

appsdir = $(datadir)/applications
apps_DATA = qcomicbook.desktop
