iconsdir = $(datadir)/qcomicbook
icons_DATA = bestfit.png \
	     fitheight.png \
	     fitwidth.png \
	     fforward.png \
	     fbackward.png \
	     info.png \
	     japanese.png \
	     nextpage.png \
	     orgsize.png \
	     pagebottom.png \
	     pagetop.png \
	     prevpage.png \
	     qcomicbook.png \
	     thumbnails.png \
	     twopages.png \
	     wholepage.png

